--- a/antsystems-backend/package.json
+++ b/antsystems-backend/package.json
@@ -4,20 +4,21 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "backend": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongodb": "^4.1.1",
-    "mongoose": "^6.0.5",
+    "express": "^4.18.2",
+    "mongodb": "^4.17.1",
+    "mongoose": "^6.12.3",
     "node": "^16.6.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.22"
   }
 }
