--- a/antsystems-frontend/package.json
+++ b/antsystems-frontend/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@generic-ui/fabric": "^0.21.0",
+    "@generic-ui/hermes": "^0.21.0",
+    "@generic-ui/ngx-grid": "^0.21.0",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-cli-ng": "^1.0.0",
     "@ngneat/elf-devtools": "^1.3.0",
