--- a/antsystems-frontend/package.json
+++ b/antsystems-frontend/package.json
@@ -11,13 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^17.0.4",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^17.0.4",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@generic-ui/fabric": "^0.21.0",
     "@generic-ui/hermes": "^0.21.0",
     "@generic-ui/ngx-grid": "^0.21.0",
@@ -29,6 +32,7 @@
     "@ngneat/elf-persist-state": "^1.2.0",
     "@ngneat/elf-requests": "^1.9.2",
     "@ngneat/elf-state-history": "^1.4.0",
+    "mdb-angular-ui-kit": "^5.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
