--- a/antsystems-backend/package.json
+++ b/antsystems-backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "backend": "nodemon app.js"
+    "backend": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
