--- a/antsystems-backend/package.json
+++ b/antsystems-backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "backend": "nodemon server.js",
-    "start": "server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
