--- a/antsystems-frontend/package.json
+++ b/antsystems-frontend/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve",
+    "proxy": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "prod": "ng serve --configuration production",
     "test": "ng test"
   },
   "private": true,
