--- a/antsystems-frontend/package.json
+++ b/antsystems-frontend/package.json
@@ -34,6 +34,7 @@
     "@ngneat/elf-persist-state": "^1.2.0",
     "@ngneat/elf-requests": "^1.9.2",
     "@ngneat/elf-state-history": "^1.4.0",
+    "flowbite-datepicker": "^1.2.6",
     "mdb-angular-ui-kit": "^5.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
